// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-advisor - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Azure Advisor reviews and recommendations using available advisor_* MCP tools. WHEN: "run an advisor review", "check my Azure advisor recommendations", "summarize advisor findings", "what does Advisor say about my subscription", "give me an advisor health check", "audit my Azure resources with Advisor". USE FOR: read-only Advisor sweeps with catalog, recommendations, and IaaC fixes. DO NOT USE FOR: changing resources, cost analysis (use azure-cost), or non-Advisor diagnostics (use azure-diagnostics).",
  "extractedKeywords": [
    "about",
    "advisor",
    "advisor_",
    "analysis",
    "audit",
    "available",
    "azure",
    "azure-cost",
    "azure-diagnostics",
    "catalog",
    "changing",
    "check",
    "cost",
    "diagnostics",
    "does",
    "findings",
    "fixes",
    "give",
    "health",
    "iaac",
    "mcp",
    "non-advisor",
    "read-only",
    "recommendations",
    "resources",
    "review",
    "reviews",
    "subscription",
    "summarize",
    "sweeps",
    "tools",
    "using",
    "what",
    "when",
    "with",
  ],
  "name": "azure-advisor",
}
`;

exports[`azure-advisor - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "about",
  "advisor",
  "advisor_",
  "analysis",
  "audit",
  "available",
  "azure",
  "azure-cost",
  "azure-diagnostics",
  "catalog",
  "changing",
  "check",
  "cost",
  "diagnostics",
  "does",
  "findings",
  "fixes",
  "give",
  "health",
  "iaac",
  "mcp",
  "non-advisor",
  "read-only",
  "recommendations",
  "resources",
  "review",
  "reviews",
  "subscription",
  "summarize",
  "sweeps",
  "tools",
  "using",
  "what",
  "when",
  "with",
]
`;
